Embedded 1/.metadata/.plugins/org.eclipse.cdt.ui/LCDTest.build.log
15:46:16 **** Incremental Build of configuration Debug for project LCDTest ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c:1:3: error: invalid preprocessing directive #main
 # main.s
   ^~~~
../Src/main.c:2:3: error: invalid preprocessing directive #John
 # John Bretz
   ^~~~
../Src/main.c:3:3: error: invalid preprocessing directive #CE
 # CE 2801
   ^~
../Src/main.c:4:3: error: invalid preprocessing directive #Lab
 # Lab 4
   ^~~
../Src/main.c:5:3: error: invalid preprocessing directive #Description
 # Description: main file
   ^~~~~~~~~~~
../Src/main.c:7:1: error: expected identifier or '(' before '.' token
 .syntax unified
 ^
../Src/main.c:18:4: error: invalid preprocessing directive #print
  # print valid number
    ^~~~~
../Src/main.c:19:10: error: stray '#' in program
  mov R1, #1234
          ^
../Src/main.c:22:4: error: invalid preprocessing directive #wait
  # wait a second
    ^~~~
../Src/main.c:23:10: error: stray '#' in program
  mov R2, #2000
          ^
../Src/main.c:27:4: error: invalid preprocessing directive #print
  # print an invalid number
    ^~~~~
../Src/main.c:28:10: error: stray '#' in program
  mov R1, #0xFFFF
          ^
../Src/main.c:31:10: error: stray '#' in program
  mov R2, #2000
          ^
../Src/main.c:35:3: error: invalid preprocessing directive #print
  #print a string
   ^~~~~
../Src/main.c:39:10: error: stray '#' in program
  mov R2, #2000
          ^
../Src/main.c:44:10: error: stray '#' in program
  mov R2, #2000
          ^
../Src/main.c:47:10: error: stray '#' in program
  mov R0, #1
          ^
../Src/main.c:48:10: error: stray '#' in program
  mov R1, #5
          ^
../Src/main.c:51:10: error: stray '#' in program
  mov R2, #2000
          ^
make: *** [Src/subdir.mk:18: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:46:17 Build Failed. 20 errors, 0 warnings. (took 972ms)

